# krishiv

./: .antigravityignore  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.fast  Dockerfile.prod  GOVERNANCE.md  Makefile  NOTICE  README.md  REPOSITORY_LAYOUT.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  justfile  k8s-client-pod.yaml  review_report.md  rust-analyzer.toml  rust_out  test_index
crates/krishiv-ai/: Cargo.toml
crates/krishiv-ai/src/: dedup.rs  lib.rs  memo.rs  rag.rs  vector_sinks.rs
crates/krishiv-api/: Cargo.toml  README.md
crates/krishiv-api/examples/: local_sql_parquet.rs  memory_stream.rs  rust_complex.rs
crates/krishiv-api/src/: blocking.rs  catalog.rs  collect.rs  conformance.rs  connector_runtime.rs  dataframe.rs  delivery_cert.rs  differential_corpus.rs  engines.rs  error.rs  expression.rs  incremental_flow.rs  io.rs  lib.rs  materialized_table.rs  mode_conformance.rs  prepared.rs  process.rs  pyspark_parity.rs  query.rs  session.rs  sql_job.rs  stream.rs  streaming_builder.rs  streaming_dataframe.rs  tests.rs  timers.rs  types.rs  window.rs
crates/krishiv-barrier/: Cargo.toml
crates/krishiv-barrier/src/: client.rs  dispatch.rs  lib.rs
crates/krishiv-bench/: Cargo.toml  README.md  k8s_distributed.py  stream_benchmark.py  tpch_benchmark.py
crates/krishiv-bench/benches/: ivm_vs_full_recompute.rs  nexmark.rs  streaming_latency.rs  tpcds_smoke.rs  tpch_distributed.rs  tpch_overhead.rs  tpch_sf10.rs
crates/krishiv-bench/k8s_examples/: batch.py  stream.py
crates/krishiv-bench/src/: comparison.rs  lib.rs  phase_i.rs  tpcds.rs
crates/krishiv-catalog/: Cargo.toml
crates/krishiv-catalog/src/: iceberg_rest.rs  lib.rs
crates/krishiv-cep/: Cargo.toml
crates/krishiv-cep/src/: lib.rs  matcher.rs  pattern.rs
crates/krishiv-chaos/: Cargo.toml  README.md
crates/krishiv-chaos/src/: lib.rs
crates/krishiv-chaos/tests/: chaos_suite.rs
crates/krishiv-checkpoint/: Cargo.toml
crates/krishiv-checkpoint/src/: lib.rs  object_store.rs  rescaling.rs  storage_uri.rs
crates/krishiv-checkpoint/tests/: integration_state_checkpoint.rs  upgrade_compat.rs
crates/krishiv-cli/: Cargo.toml
crates/krishiv-cli/src/: lib.rs  main.rs
crates/krishiv-cli/tests/: r1_cli_contract.rs  r1_cli_golden.rs
crates/krishiv-common/: Cargo.toml  README.md
crates/krishiv-common/src/: arrow.rs  async_util.rs  auth_util.rs  backpressure.rs  blocking.rs  chaos.rs  compute_pool.rs  durability.rs  env_registry.rs  gap_tests.rs  hash.rs  lib.rs  memory_budget.rs  panic_util.rs  partition.rs  production.rs  sql_util.rs  stream_quality.rs  test_fixtures.rs  unified_memory_manager.rs  validate.rs  write_commit.rs
crates/krishiv-common/tests/: chaos_suite.rs
crates/krishiv-conformance/: Cargo.toml
crates/krishiv-conformance/src/: lib.rs
crates/krishiv-conformance/tests/: corpus.rs  corpus_dual_run.rs
crates/krishiv-connect-client/: Cargo.toml  README.md
crates/krishiv-connect-client/src/: lib.rs
crates/krishiv-connectors/: Cargo.toml  README.md
crates/krishiv-connectors/src/: avro.rs  capabilities.rs  cassandra_sink.rs  cdc.rs  cdc_router.rs  cert_matrix.rs  certification.rs  config.rs  csv_json.rs  elasticsearch_sink.rs  error.rs  feature_store.rs  hbase_connector.rs  io_contract.rs  jdbc.rs  kafka.rs  kafka_transactional_sink.rs  kinesis.rs  lib.rs  offset.rs  parquet.rs  partition.rs  pulsar_connector.rs  quality.rs  reachability.rs  s3.rs  schema_normalize.rs  schema_registry.rs  sink.rs  source.rs  sql.rs  storage_factory.rs  tests.rs  transactional.rs  transactional_kafka.rs  two_phase.rs  two_phase_parquet_s3.rs  vortex.rs
crates/krishiv-connectors/tests/: certification.rs  exactly_once.rs  exactly_once_certification.rs  integration_connector_lakehouse.rs
crates/krishiv-dataflow/: Cargo.toml  README.md
crates/krishiv-dataflow/src/: adaptive.rs  aggregate.rs  aligned_input.rs  barrier_align.rs  broadcast_state.rs  buffer.rs  cep.rs  chunk.rs  coalesce_partitions.rs  connected_streams.rs  continuous.rs  dedup_operator.rs  delta_join.rs  envelope.rs  fusion.rs  group_state.rs  interval_join.rs  join.rs  lib.rs  lib_tests.rs  live_table.rs  lookup_join.rs  memo.rs  operator_config.rs  operator_runtime.rs  process_fn.rs  profile.rs  queue.rs  schema_normalize.rs  side_output.rs  sort.rs  spill.rs  state_descriptor.rs  temporal_join.rs  watermark_e2e.rs  watermark_join.rs  watermark_util.rs  window_join.rs
crates/krishiv-dataflow/tests/: streaming_window_float64.rs
crates/krishiv-delta/: Cargo.toml  README.md
crates/krishiv-delta/src/: behavior_version.rs  coalesce.rs  delta_batch.rs  error.rs  gap_tests.rs  lateness.rs  lib.rs  trace.rs  view.rs
crates/krishiv-delta/tests/: proptest_zset.rs
crates/krishiv-engine-core/: Cargo.toml
crates/krishiv-engine-core/src/: changelog.rs  consolidate.rs  durable.rs  engine.rs  error.rs  job.rs  kind.rs  lib.rs  mem.rs  runtime.rs  upsert.rs
crates/krishiv-engines/: Cargo.toml
crates/krishiv-engines/src/: lib.rs
crates/krishiv-exec/: Cargo.toml
crates/krishiv-exec/src/: adaptive.rs  aggregate.rs  barrier_align.rs  cep.rs  chunk.rs  coalesce_partitions.rs  continuous.rs  interval_join.rs  join.rs  lib.rs  live_table.rs  memo.rs  operator_runtime.rs  queue.rs  schema_normalize.rs  side_output.rs  temporal_join.rs  watermark_e2e.rs  watermark_util.rs
crates/krishiv-executor/: Cargo.toml  README.md
crates/krishiv-executor/src/: aligned_join.rs  assignment_inbox.rs  barrier.rs  barrier_grpc.rs  barrier_transport.rs  cli.rs  error.rs  ess_client.rs  execution_model.rs  (+11 more)
crates/krishiv-federation/: Cargo.toml
crates/krishiv-flight/: Cargo.toml
crates/krishiv-flight-sql/: Cargo.toml  README.md
crates/krishiv-governance/: Cargo.toml
crates/krishiv-ivm/: Cargo.toml  README.md
crates/krishiv-lakehouse/: Cargo.toml
crates/krishiv-mcp/: Cargo.toml
crates/krishiv-metrics/: Cargo.toml  README.md
crates/krishiv-operator/: Cargo.toml  README.md
crates/krishiv-optimizer/: Cargo.toml
(+1359 files in other folders)
