[workspace]
members = [
    "crates/krishiv",
    "crates/krishiv-ai",
    "crates/krishiv-api",
    "crates/krishiv-common",
    "crates/krishiv-checkpoint",
    "crates/krishiv-connectors",
    "crates/krishiv-executor",
    "crates/krishiv-exec",
    "crates/krishiv-optimizer",
    "crates/krishiv-plan",
    "crates/krishiv-proto",
    "crates/krishiv-operator",
    "crates/krishiv-runtime",
    "crates/krishiv-scheduler",
    "crates/krishiv-shuffle",
    "crates/krishiv-sql",
    "crates/krishiv-state",
    "crates/krishiv-udf",
    "crates/krishiv-ui",
    "crates/krishiv-python",
    "crates/krishiv-lakehouse",
    "crates/krishiv-flight-sql",
    "crates/krishiv-metrics",
    "crates/krishiv-governance",
    "crates/krishiv-bench",
    "crates/krishiv-cep",
]
default-members = [
    "crates/krishiv",
    "crates/krishiv-ai",
    "crates/krishiv-api",
    "crates/krishiv-common",
    "crates/krishiv-checkpoint",
    "crates/krishiv-connectors",
    "crates/krishiv-executor",
    "crates/krishiv-exec",
    "crates/krishiv-optimizer",
    "crates/krishiv-plan",
    "crates/krishiv-proto",
    "crates/krishiv-operator",
    "crates/krishiv-runtime",
    "crates/krishiv-scheduler",
    "crates/krishiv-shuffle",
    "crates/krishiv-sql",
    "crates/krishiv-state",
    "crates/krishiv-udf",
    "crates/krishiv-ui",
    "crates/krishiv-python",
    "crates/krishiv-lakehouse",
    "crates/krishiv-flight-sql",
    "crates/krishiv-metrics",
    "crates/krishiv-governance",
    "crates/krishiv-cep",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"

[workspace.dependencies]
arrow = { version = "58.3.0", features = ["prettyprint", "ipc_compression"] }
arrow-flight = { version = "58.3.0", features = ["flight-sql-experimental"] }
pyo3 = { version = "0.28.3" }
iceberg = "0.9.1"
async-trait = "0.1"
bytes = "1"
object_store = "0.13.2"
askama = "0.16.0"
axum = "0.8.9"
datafusion = "53.1.0"
futures = "0.3"
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
kube = { version = "3.1.0", features = ["runtime"] }
parquet = "58.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
prost = "0.14.3"
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
tower = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.33.0"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.0", features = ["trace"] }
opentelemetry-stdout = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
redb = "4.1.0"
mockito = "1"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
webpki-root-certs = "1.0"
uuid = { version = "1", features = ["v4"] }
lz4_flex = "0.11"
twox-hash = "2.1"
zstd = "0.13"
thiserror = "1"
dashmap = "6.1"
fastembed = "4.9"
qdrant-client = "1.16"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }

hex = "0.4"
apache-avro = "0.17"
chrono = { version = "0.4", features = ["serde"] }
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = 1

[profile.release]
opt-level = 3
lto = false
codegen-units = 1

# release-single-node: fast local release build for single-node deployments.
# Skips LTO and uses multiple codegen units so `cargo build --profile release-single-node`
# finishes quickly without the multi-minute fat-LTO link step.
[profile.release-single-node]
inherits = "release"
lto = "off"
codegen-units = 16

# release-k8s: k8s/bare-metal image builds on memory-constrained CI runners.
# Thin LTO keeps binary size reasonable without the peak RAM of fat LTO.
[profile.release-k8s]
inherits = "release"
lto = "thin"
codegen-units = 4

# release-bare-metal: same as release-k8s; alias so Makefile targets are readable.
[profile.release-bare-metal]
inherits = "release-k8s"
