[workspace]
members = [
    "crates/krishiv",
    "crates/krishiv-api",
    "crates/krishiv-common",
    "crates/krishiv-connectors",
    "crates/krishiv-dataflow",
    "crates/krishiv-executor",
    "crates/krishiv-plan",
    "crates/krishiv-proto",
    "crates/krishiv-operator",
    "crates/krishiv-runtime",
    "crates/krishiv-scheduler",
    "crates/krishiv-shuffle",
    "crates/krishiv-sql",
    "crates/krishiv-state",
    "crates/krishiv-ui",
    "crates/krishiv-python",
    "crates/krishiv-flight-sql",
    "crates/krishiv-sql-gateway",
    "crates/krishiv-metrics",
    "crates/krishiv-bench",
    "crates/krishiv-chaos",
]
default-members = [
    "crates/krishiv",
    "crates/krishiv-api",
    "crates/krishiv-common",
    "crates/krishiv-connectors",
    "crates/krishiv-dataflow",
    "crates/krishiv-executor",
    "crates/krishiv-plan",
    "crates/krishiv-proto",
    "crates/krishiv-operator",
    "crates/krishiv-runtime",
    "crates/krishiv-scheduler",
    "crates/krishiv-shuffle",
    "crates/krishiv-sql",
    "crates/krishiv-state",
    "crates/krishiv-ui",
    "crates/krishiv-python",
    "crates/krishiv-flight-sql",
    "crates/krishiv-sql-gateway",
    "crates/krishiv-metrics",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"

[workspace.dependencies]
arrow = { version = "58.3.0", features = ["prettyprint", "ipc_compression", "csv", "json"] }
arrow-flight = { version = "58.3.0", features = ["flight-sql-experimental"] }
pyo3 = { version = "0.29.0", features = ["experimental-async"] }
iceberg = "0.9.1"
iceberg-catalog-rest = "0.9.1"
iceberg-datafusion = "0.9.1"
async-trait = "0.1"
bytes = "1"
object_store = "0.13.2"
askama = "0.16.0"
axum = "0.8.9"
datafusion = "53.1.0"
futures = "0.3"
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
kube = { version = "3.1.0", features = ["runtime"] }
parquet = "58.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
prost = "0.14.4"
prost-build = "0.14.4"
protoc-bin-vendored = "3.2.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.14.6", features = ["transport", "tls-ring"] }
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
tower = "0.5.3"
http = "1"
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.33.0"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.0", features = ["trace"] }
opentelemetry-stdout = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }
mockito = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "blocking"] }
webpki-root-certs = "1.0"
uuid = { version = "1", features = ["v4"] }
lz4_flex = "0.11"
twox-hash = "2.1"
zstd = "0.13"
thiserror = "1"
dashmap = "6.1"
qdrant-client = "1.16"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }

base64 = "0.22.1"
constant_time_eq = "0.3"
indexmap = "2"
hex = "0.4"
apache-avro = "0.17"
chrono = { version = "0.4", features = ["serde"] }
proptest = "1"
regex = "1"
sqlparser = "0.62.0"
url = "2"
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"


[profile.dev]
split-debuginfo = "unpacked"
incremental = true

# Deps compiled at opt-level 1: basic inlining + loop unrolling keeps Arrow/DataFusion
# usable in tests while shaving ~30% off cold-compile time vs opt-level 2.
# Drop to 0 below if runtime correctness (not speed) is all you care about during
# a session, or use --profile dev-fast for maximum compile speed.
[profile.dev.package."*"]
opt-level = 1
debug = 0

# dev-fast: maximum compile-speed profile for rapid iteration.
# Use: cargo check/build/test --profile dev-fast
# WARNING: Arrow/DataFusion run 10-100x slower — do not benchmark under this profile.
[profile.dev-fast]
inherits = "dev"
debug = 0
incremental = true

[profile.dev-fast.package."*"]
opt-level = 0
debug = 0

# release: shared base — opt-level 3, panic=abort for all production variants.
# Specific profiles override lto/codegen-units for their compile-time budget.
# panic=abort removes all unwinding infrastructure (~5% size reduction, minor
# speed boost). Tests always run under dev (panic=unwind), so this is safe.
[profile.release]
opt-level = 3
lto = false
codegen-units = 1
panic = "abort"

# release-max: highest performance for nightly Docker and production releases.
# Fat LTO performs whole-program optimization across every crate boundary —
# critical for a data engine where hot paths span datafusion → arrow → parquet.
# Expect 15-25% faster runtime and ~20% smaller binary vs release-k8s.
# Compile cost: 3-5x longer than release-k8s; only suitable for nightly/release CI.
[profile.release-max]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

# release-single-node: fast local release build for single-node deployments.
# Skips LTO and uses multiple codegen units so `cargo build --profile release-single-node`
# finishes quickly without the multi-minute fat-LTO link step.
# incremental = true so repeated local rebuilds stay fast.
[profile.release-single-node]
inherits = "release"
lto = "off"
codegen-units = 16
incremental = true

# release-k8s: k8s/bare-metal image builds on memory-constrained CI runners.
# Thin LTO keeps binary size reasonable without the peak RAM of fat LTO.
# Use this when nightly runners have less than ~16 GB free RAM.
[profile.release-k8s]
inherits = "release"
lto = "thin"
codegen-units = 4
strip = "debuginfo"

# release-bare-metal: same as release-k8s; alias so Makefile targets are readable.
[profile.release-bare-metal]
inherits = "release-k8s"
