[package]
name = "krishiv-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# CI uses `--no-default-features`; enable `fastembed-local` for HuggingFace + rag_index tests (needs C++ / libstdc++ for ONNX).
default = []
fastembed-local = ["dep:fastembed"]
tiktoken = ["dep:tiktoken-rs"]
# Vector sink backends (merged from the former krishiv-vector-sinks crate).
vector-sinks = ["qdrant", "pgvector"]
qdrant = ["dep:qdrant-client"]
pgvector = ["dep:sqlx"]

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
fastembed = { workspace = true, optional = true }
hex = { workspace = true }
krishiv-common = { path = "../krishiv-common" }
krishiv-plan = { path = "../krishiv-plan" }
parquet = { workspace = true }
qdrant-client = { workspace = true, optional = true }
redb = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, optional = true }
twox-hash = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tiktoken-rs = { version = "0.6", optional = true }

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
