[package]
name = "krishiv-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = []
# Vector sink backends live in `krishiv-connectors::vector`.
vector-sinks = ["krishiv-connectors/vector-sinks"]
qdrant = ["vector-sinks", "krishiv-connectors/qdrant"]
pgvector = ["vector-sinks", "krishiv-connectors/pgvector"]

[dependencies]
krishiv-connectors = { path = "../krishiv-connectors", default-features = false }

[lints]
workspace = true
