[package]
name = "krishiv-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
arrow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
krishiv-common = { path = "../krishiv-common" }
krishiv-plan = { path = "../krishiv-plan" }
krishiv-runtime = { path = "../krishiv-runtime" }
krishiv-state = { path = "../krishiv-state" }
krishiv-dataflow = { path = "../krishiv-dataflow" }
krishiv-connectors = { path = "../krishiv-connectors", features = ["lakehouse", "hudi"] }
krishiv-sql = { path = "../krishiv-sql" }

[features]
kafka = ["krishiv-connectors/kafka"]

[dev-dependencies]
krishiv-common = { path = "../krishiv-common" }
krishiv-plan = { path = "../krishiv-plan" }
krishiv-flight-sql = { path = "../krishiv-flight-sql" }
parquet = { workspace = true }
tempfile = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
