[package]
name = "krishiv-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
readme = "README.md"

[dependencies]
base64 = { workspace = true }
async-trait = { workspace = true }
arrow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
krishiv-common = { path = "../krishiv-common", version = "0.1.0" }
krishiv-plan = { path = "../krishiv-plan", version = "0.1.0" }
krishiv-runtime = { path = "../krishiv-runtime", version = "0.1.0" }
krishiv-state = { path = "../krishiv-state", version = "0.1.0" }
krishiv-dataflow = { path = "../krishiv-dataflow", version = "0.1.0" }
krishiv-connectors = { path = "../krishiv-connectors", version = "0.1.0", features = ["lakehouse", "hudi"] }
krishiv-sql = { path = "../krishiv-sql", version = "0.1.0" }
# A-4: needed to re-export `LiveJobView` for `Session::list_jobs_remote` /
# `Session::get_job_remote`. The runtime already depends on it transitively,
# but `krishiv-api` cannot reach the symbol through the runtime's
# re-export boundary, so we depend on the type crate directly.
krishiv-scheduler = { path = "../krishiv-scheduler", version = "0.1.0" }
krishiv-delta = { path = "../krishiv-delta", version = "0.1.0" }
krishiv-ivm = { path = "../krishiv-ivm", version = "0.1.0" }
krishiv-engine-core = { path = "../krishiv-engine-core", version = "0.1.0" }
krishiv-engines = { path = "../krishiv-engines", version = "0.1.0" }
datafusion = { workspace = true }
# iceberg feature deps — pulled in only when local-catalog or iceberg-datafusion are requested
iceberg = { workspace = true, optional = true }
parquet = { workspace = true }
twox-hash = { workspace = true }

[features]
kafka = ["krishiv-connectors/kafka", "krishiv-runtime/kafka"]
# Enable Iceberg catalog integration (registers KrishivCatalog as DataFusion catalog provider).
iceberg-catalog = [
    "dep:iceberg",
    "krishiv-sql/local-catalog",
    "krishiv-sql/iceberg-datafusion",
    "krishiv-connectors/iceberg",
]

[dev-dependencies]
# dev-only cycle (flight-sql depends on api); Cargo permits dev-dep cycles.
# Gives the remote-execution Flight test a live server to hit.
krishiv-flight-sql = { path = "../krishiv-flight-sql", version = "0.1.0" }
krishiv-common = { path = "../krishiv-common", version = "0.1.0" }
krishiv-plan = { path = "../krishiv-plan", version = "0.1.0" }
tempfile = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
