[package]
name = "krishiv-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }

[lints]
workspace = true
