[package]
name = "krishiv-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
datafusion = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = "2"

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
datafusion = { workspace = true }

[lints]
workspace = true
