[package]
name = "krishiv-chaos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "krishiv_chaos"
path = "src/lib.rs"

[dependencies]
krishiv-common = { path = "../krishiv-common", features = ["chaos"] }

[dev-dependencies]
krishiv-checkpoint = { path = "../krishiv-checkpoint" }
krishiv-connectors = { path = "../krishiv-connectors" }
krishiv-proto = { path = "../krishiv-proto" }
krishiv-scheduler = { path = "../krishiv-scheduler" }
krishiv-governance = { path = "../krishiv-governance" }
krishiv-operator = { path = "../krishiv-operator" }
arrow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }

[lints]
workspace = true
