[package]
name = "krishiv-checkpoint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
krishiv-state = { path = "../krishiv-state" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
