[package]
name = "krishiv-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
krishiv-api = { path = "../krishiv-api" }

[dev-dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "krishiv"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
