[package]
name = "krishiv-connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
# kafka is default so production builds include the real Kafka connector without
# requiring an explicit feature flag. O1: rdkafka is already in [dependencies]
# as optional; enabling it by default has no API surface change for users who
# never call KafkaSource/KafkaSink.
default = ["kafka"]
kafka = ["dep:rdkafka"]
state = ["dep:krishiv-state"]
schema-registry = [
    "dep:apache-avro",
    "dep:async-trait",
    "dep:dashmap",
    "dep:reqwest",
    "dep:serde",
    "dep:prost",
]

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true, features = ["object_store", "async"] }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
krishiv-common = { path = "../krishiv-common" }
krishiv-exec = { path = "../krishiv-exec" }
krishiv-lakehouse = { path = "../krishiv-lakehouse" }
krishiv-proto = { path = "../krishiv-proto" }
krishiv-state = { path = "../krishiv-state", optional = true }
object_store = { workspace = true }
rdkafka = { version = "0.36", optional = true, default-features = false, features = ["tokio"] }
regex = "1"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tracing = { workspace = true }

# schema-registry feature dependencies (Confluent Schema Registry deserialization)
apache-avro = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = "1"
wiremock = { workspace = true }

[lints]
workspace = true
